# a2c-smcp-protocol

./: .gitignore  CHANGELOG_DPE_REMOVAL.md  CLAUDE.md  README.md  index.html  latest  mkdocs.yml  pyproject.toml  tasks.py  versions.json
.codex/skills/a2c-computer-protocol/: SKILL.md
.github/workflows/: deploy-pages.yml
0.1.2-rc1/: 404.html  index.html  sitemap.xml
0.1.2-rc1/appendix/faq/: index.html
0.1.2-rc1/search/: search_index.json
0.1.2-rc1/specification/: index.html
0.1.2-rc1/specification/architecture/: index.html
0.1.2-rc1/specification/data-structures/: index.html
0.1.2-rc1/specification/desktop/: index.html
0.1.2-rc1/specification/error-handling/: index.html
0.1.2-rc1/specification/events/: index.html
0.1.2-rc1/specification/room-model/: index.html
0.1.2-rc1/specification/security/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/appendix/faq/: index.html
0.2.0/guides/computer-mcp-config-guide/: index.html
0.2.0/guides/finder-sdk-guide/: index.html
0.2.0/migrations/v0.2-uri-metadata-refactor/: index.html
0.2.0/search/: search_index.json
0.2.0/specification/: index.html
0.2.0/specification/architecture/: index.html
0.2.0/specification/data-structures/: index.html
0.2.0/specification/desktop/: index.html
0.2.0/specification/dpe/: index.html
0.2.0/specification/dpe-standardization-proposal/: index.html
0.2.0/specification/error-handling/: index.html
0.2.0/specification/events/: index.html
0.2.0/specification/finder/: index.html
0.2.0/specification/room-model/: index.html
0.2.0/specification/security/: index.html
0.2.0/specification/versioning/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/appendix/faq/: index.html
0.2.1/guides/computer-mcp-config-guide/: index.html
0.2.1/migrations/v0.2-uri-metadata-refactor/: index.html
0.2.1/migrations/v0.2.1-skill-and-blob-transfer/: index.html
0.2.1/search/: search_index.json
0.2.1/specification/: index.html
0.2.1/specification/architecture/: index.html
0.2.1/specification/blob-transfer/: index.html
0.2.1/specification/data-structures/: index.html
0.2.1/specification/desktop/: index.html
0.2.1/specification/error-handling/: index.html
0.2.1/specification/events/: index.html
0.2.1/specification/room-model/: index.html
0.2.1/specification/security/: index.html
0.2.1/specification/skill/: index.html
0.2.1/specification/versioning/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/appendix/faq/: index.html
0.2.2/guides/computer-mcp-config-guide/: index.html
0.2.2/migrations/v0.2-uri-metadata-refactor/: index.html
0.2.2/migrations/v0.2.1-skill-and-blob-transfer/: index.html
0.2.2/search/: search_index.json
0.2.2/specification/: index.html
0.2.2/specification/architecture/: index.html
0.2.2/specification/blob-transfer/: index.html
0.2.2/specification/computer-management/: index.html
0.2.2/specification/data-structures/: index.html
0.2.2/specification/desktop/: index.html
0.2.2/specification/error-handling/: index.html
0.2.2/specification/events/: index.html
0.2.2/specification/room-model/: index.html
0.2.2/specification/security/: index.html
0.2.2/specification/skill/: index.html
0.2.2/specification/versioning/: index.html
0.2.3/: 404.html  index.html
0.2.3/appendix/faq/: index.html
0.2.3/migrations/v0.2-uri-metadata-refactor/: index.html
0.2.3/search/: search_index.json
0.2.3/specification/: index.html
0.2.3/specification/architecture/: index.html
0.2.3/specification/blob-transfer/: index.html
0.2.3/specification/computer/: index.html
0.2.3/specification/events/: index.html
0.2.3/specification/room-model/: index.html
0.2.3/specification/skill/: index.html
0.2.3/specification/versioning/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/appendix/faq/: index.html
0.3.0/guides/computer-mcp-config-guide/: index.html
0.3.0/guides/mcp-approval-gate-alignment/: index.html
0.3.0/migrations/v0.2-uri-metadata-refactor/: index.html
0.3.0/migrations/v0.2.1-skill-and-blob-transfer/: index.html
0.3.0/migrations/v0.3.0-plugin-install-enable-separation/: index.html
0.3.0/search/: search_index.json
0.3.0/specification/: index.html
0.3.0/specification/architecture/: index.html
0.3.0/specification/blob-transfer/: index.html
0.3.0/specification/computer/: index.html
0.3.0/specification/computer-management/: index.html
0.3.0/specification/data-structures/: index.html
0.3.0/specification/desktop/: index.html
docs/: index.md
docs/appendix/: faq.md
docs/guides/: computer-mcp-config-guide.md  finder-sdk-guide.md  mcp-approval-gate-alignment.md
docs/migrations/: v0.2-uri-metadata-refactor.md  v0.2.1-skill-and-blob-transfer.md  v0.3.0-plugin-install-enable-separation.md
docs/specification/: architecture.md  blob-transfer.md  computer-management.md  computer.md  data-structures.md  desktop.md  dpe-standardization-proposal.md  dpe.md  error-handling.md  events.md  finder.md  index.md  security.md  skill.md  versioning.md
scripts/: __init__.py
scripts/docs/: __init__.py  config.py  tasks.py  version_utils.py
(+40 files in other folders)
